--- a/VP/V2/board-golden-aspect.css
+++ b/VP/V2/board-golden-aspect.css
@@ -1,9 +1,11 @@
 ﻿html, body
 {
-    height : 100%;
     margin : 0px;
     padding : 0px;
+
     width : 100%;
+    height : 100%;
+
     background-color:black;
 }
 
@@ -11,6 +13,14 @@
 {
     text-align:center;
     height:99%;
+    position:relative;
+}
+
+#full
+{
+    width:100%;
+    height:99%;
+    position:absolute;
 }
 
 #goldenBoard
