--- a/VP/V3/css/board-golden-aspect.css
+++ b/VP/V3/css/board-golden-aspect.css
@@ -12,8 +12,9 @@
 #center
 {
     text-align:center;
-    height:99%;
+    height:92%;
     position:relative;
+    padding-top:2%;
 }
 
 #full
@@ -21,4 +22,24 @@
     width:100%;
     height:99%;
     position:absolute;
+}
+
+#overlay{
+    position:absolute;
+    left:0px;
+    top:0px;
+}
+
+#spin{
+    height:100px;
+    width:100px;
+    top:20px;
+    left:50px;
+}
+
+#fullscreen{
+    height:100px;
+    width:100px;
+    top:120px;
+    left:50px;
 }
